se aggregan cambios

--- a/src/app/modules/productos/producto/producto.component.html
+++ b/src/app/modules/productos/producto/producto.component.html
@@ -9,7 +9,7 @@
       {{producto.description}}
     </div>
     <div>
-      Precio {{producto.price | currency}}
+      Precio {{producto.price | currency}}Bs
     </div>
   </mat-card-content>
   <mat-card-actions>
