se mueve header a una carpeta llamada header

--- a/src/app/modules/productos/producto/producto.component.html
+++ b/src/app/modules/productos/producto/producto.component.html
@@ -9,7 +9,7 @@
       {{producto.description}}
     </div>
     <div>
-      Precio {{producto.price | currency}}Bs
+      Precio {{producto.price | currency}}<button mat-raised-button>text</button>
     </div>
   </mat-card-content>
   <mat-card-actions>
