--- a/src/app/modules/checkout/checkout.component.scss
+++ b/src/app/modules/checkout/checkout.component.scss
@@ -10,19 +10,21 @@
     width:100%;
   }
   .form-element{
-    padding:5px 0px 25px 2px;
+    padding:5px 0px 10px 2px;
     width:100%;
-    margin-bottom: 5rem;
   }
 }
 .container-button{
   margin: 0 auto;
   display:block;
   width: 40%;
-  margin-top: 4rem;
+  padding: 1rem;
 
   button{
     width:100%;
   }
 
+}
+.pl10{
+  padding-left: 10px !important;
 }
