se agrega flex-layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,27 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="main-container">
+  <mat-toolbar class="topbar telative white border-colores">
+    <button mat-icon-button (click)="snav.toggle()" value="sidebarclosed">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <div class="navbar-header">
+          <a [routerLink]="['/']"> <img class="pt10" src="./assets/img/logo-vimak.png" alt=""></a>
+    </div>
+    <span fxFlex></span>
+    <app-header></app-header>
+  </mat-toolbar>
+  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 0 : 0">
+      <mat-sidenav #snav id="snav" class="dark-sidebar pl-xs" [mode]="mobileQuery.matches ? 'side' : 'over'" fixedTopGap="0" [opened]="mobileQuery.matches" [disableClose]="mobileQuery.matches"  >
+              <app-sidebar></app-sidebar>
+      </mat-sidenav>
+      <mat-sidenav-content class="page-wrapper">
+              <div class="page-content">
+                      <router-outlet><app-spinner></app-spinner></router-outlet>
+              </div>
+      </mat-sidenav-content>
+   </mat-sidenav-container>
+</div>
+
+
+
+
+
