--- a/src/app/modules/checkout/checkout.component.html
+++ b/src/app/modules/checkout/checkout.component.html
@@ -1,63 +1,102 @@
-<div class="container">
-  <form class="form item">
-    <mat-form-field class="form-element">
-      <input
-        matInput
-        placeholder="Name"
-        required
-        [(ngModel)]="model.name"
-        name="name"
-        #name="ngModel"
-      />
-      <mat-error *ngIf="name.valid || name.pristine">
-        Name is required.
-      </mat-error>
-    </mat-form-field>
-    <mat-radio-group class="form-element">
-      <p>choose an Option</p>
-      <mat-radio-button value="pickup" (change)="onPickupOrDelivery(false)"
-        >Pickup</mat-radio-button
-      >
-      <mat-radio-button class="pl10" value="delivery" (change)="onPickupOrDelivery(true)"
-        >Delivery</mat-radio-button
-      >
-    </mat-radio-group>
-    <mat-form-field class="form-element">
-      <input
-        matInput
-        placeholder="Shipping Address"
-        required
-        [(ngModel)]="model.shippingAddress"
-        name="shippingAddress"
-        #shippingAddress="ngModel"
-      />
-      <mat-error *ngIf="shippingAddress.valid || shippingAddress.pristine">
-        Shipping Address is required.
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field class="form-element">
-      <input
-        matInput
-        placeholder="City"
-        required
-        [(ngModel)]="model.city"
-        name="city"
-        #city="ngModel"
-      />
-      <mat-error *ngIf="city.valid || city.pristine">
-        City is required.
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field class="form-element">
-      <mat-label>Select me</mat-label>
-      <mat-select name="store" #store="ngModel" [(ngModel)]="model.store">
-        <mat-option [value]="item" *ngFor="let item of stores">
-          {{ item.name }} - {{ item.openingHours }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </form>
-</div>
+<mat-accordion>
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title class="primary"> Personal data </mat-panel-title>
+      <mat-panel-description>
+        Type your name and address
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <form>
+      <div fxLayout="row wrap">
+        <div fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-sm="50" class="p-r-10">
+          <mat-form-field>
+            <input
+              matInput
+              placeholder="Name"
+              required
+              [(ngModel)]="model.name"
+              name="name"
+              #name="ngModel"
+            />
+            <mat-error *ngIf="name.valid || name.pristine">
+              Name is required.
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-sm="50">
+          <mat-form-field>
+            <input
+              matInput
+              placeholder="Email"
+              required
+              [(ngModel)]="model.mail"
+              name="mail"
+              #mail="ngModel"
+            />
+            <mat-error *ngIf="mail.valid || mail.pristine">
+              Email is required.
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxLayout="row wrap">
+        <div fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-sm="50" class="p-r-10">
+          <mat-form-field>
+            <input
+              matInput
+              placeholder="Shipping Address"
+              required
+              [(ngModel)]="model.shippingAddress"
+              name="shippingAddress"
+              #shippingAddress="ngModel"
+            />
+            <mat-error
+              *ngIf="shippingAddress.valid || shippingAddress.pristine"
+            >
+              Shipping Address is required.
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-sm="50">
+          <mat-form-field class="">
+            <input
+              matInput
+              placeholder="City"
+              required
+              [(ngModel)]="model.city"
+              name="city"
+              #city="ngModel"
+            />
+            <mat-error *ngIf="city.valid || city.pristine">
+              City is required.
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxLayout="row wrap">
+        <div fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-sm="50">
+          <div fxLayout="col wrap">
+            <mat-label class="full-width">choose an Option</mat-label>
+            <mat-radio-group>
+              <mat-radio-button value="pickup" (change)="onPickupOrDelivery(false)">Pickup</mat-radio-button>
+              <mat-radio-button class="p-l-10" value="delivery" (change)="onPickupOrDelivery(true)">Delivery</mat-radio-button>
+            </mat-radio-group>
+          </div>
+        </div>
+        <div fxFlex="100" fxFlex.gt-xs="50" fxFlex.gt-sm="50">
+        <mat-form-field>
+          <mat-label>Select me</mat-label>
+          <mat-select name="store" #store="ngModel" [(ngModel)]="model.store">
+            <mat-option [value]="item" *ngFor="let item of stores">
+              {{ item.name }} - {{ item.openingHours }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        </div>
+    </div>
+    </form>
+  </mat-expansion-panel>
+</mat-accordion>
 <app-details></app-details>
 <div class="container-button">
   <button [disabled]="" mat-raised-button color="primary" type="submit">
