--- a/src/app/modules/checkout/checkout.component.scss
+++ b/src/app/modules/checkout/checkout.component.scss
@@ -1,19 +1,3 @@
-.container{
-  display: flex;
-  align-items: center;
-  padding: 1rem 5rem;
-
-  .item{
-    flex: 1 1 auto;
-  }
-  .form{
-    width:100%;
-  }
-  .form-element{
-    padding:5px 0px 10px 2px;
-    width:100%;
-  }
-}
 .container-button{
   margin: 0 auto;
   display:block;
@@ -23,8 +7,8 @@
   button{
     width:100%;
   }
+}
+.primary{
+  color:#1E88E5 !important;
+}
 
-}
-.pl10{
-  padding-left: 10px !important;
-}
