--- a/src/app/modules/productos/productos.component.scss
+++ b/src/app/modules/productos/productos.component.scss
@@ -1,7 +1,7 @@
-section.productos{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
+.productos{
+  display: grid;
+  gap: 1rem;
+  grid-auto-rows: 25rem;
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
 }
+
