--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -8,8 +8,8 @@ $headingfont: 'Poppins', sans-serif;
 
 /*Material Theme Colors*/
 
-$primary: mat-palette($mat-blue, 600);
-$accent: mat-palette($mat-indigo, 500);
+$primary: mat-palette($mat-deep-purple, 600);
+$accent: mat-palette($mat-pink, 100);
 $warn: mat-palette($mat-red, 500);
 $theme: mat-light-theme($primary, $accent, $warn);
 $background: map-get($theme, background);
@@ -60,6 +60,7 @@ $dark: #263238;
 $light: #f2f4f8;
 $extra-light: #ebf3f5;
 $secondary: #727b84;
+$white: #fff;
 
 /*Light colors*/
 $light-danger: #f9e7eb;
