--- a/src/app/modules/productos/producto/producto.component.html
+++ b/src/app/modules/productos/producto/producto.component.html
@@ -1,19 +1,15 @@
 <mat-card class="card">
-  <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-  <mat-card-header>
+    <img mat-card-image src="{{producto.imagen}}">
+    <mat-card-content>
     <mat-card-title>
       {{producto.name}}
     </mat-card-title>
-   </mat-card-header>
-  <mat-card-content>
-    <div class="pricetag">
-      <h2>{{producto.price | currency}}</h2>
-    </div>
+    <p class="pricetag">{{producto.price | currency}}</p>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-flat-button color="primary" (click)="onClick()">
-      <span>Añadir al Carrito</span>
-      <mat-icon>add_shopping_cart</mat-icon>
-    </button>
-  </mat-card-actions>
+  <mat-card-actions class="">
+    <div class="flex-inline">
+      <span><button mat-button color="primary"><mat-icon>visibility</mat-icon><span class="p-l-3">Details</span></button></span>
+      <span> <button mat-button color="primary" (click)="onClick()"><mat-icon>add_shopping_cart</mat-icon><span>Add to cart</span></button></span>
+    </div>
+ </mat-card-actions>
 </mat-card>
