--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -1,7 +1,4 @@
-<!-- ============================================================== -->
-<!-- sidebar -->
-<!-- ============================================================== -->
-<mat-nav-list appAccordion>
+<mat-nav-list appAccordion class="p-t-20">
   <mat-list-item appAccordionLink *ngFor="let menuitem of menuItems.getMenuitem()" routerLinkActive="selected" group="{{menuitem.state}}">
       <a class="" appAccordionToggle [routerLink]="['/', menuitem.state]" *ngIf="menuitem.type === 'link'">
           <mat-icon>{{ menuitem.icon }}</mat-icon>
