--- a/src/app/shared/spinner/spinner.component.scss
+++ b/src/app/shared/spinner/spinner.component.scss
@@ -18,7 +18,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #1976d2;
+  background-color: #5E35B1;
   opacity: 0.6;
   position: absolute;
   top: 0;
