--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -6,8 +6,8 @@ File: scss
 */
 
 
-/*============================================================== 
- For all pages 
+/*==============================================================
+ For all pages
  ============================================================== */
 
 
@@ -24,17 +24,22 @@ File: scss
 	bottom: 0;
 	left: 0;
 	right: 0;
-} 
+}
 
 .mat-drawer-container{
 		background: $bodycolor;
-		
+
 }
 
 html .page-wrapper{
-		height:calc(100vh - 64px);
+		 height:calc(100vh - 64px);
 		.page-content{
-				padding: 15px;
+        position: absolute !important;
+        bottom: 0;
+        left: 0px;
+        right: 0px;
+        top: 0px;
+        padding: 1.5rem;
 		}
 }
 
@@ -87,7 +92,7 @@ Chartistt chart css
 		border-radius: 100%;
 			}
  }
-}        
+}
 
 .button-row button{
 	margin-bottom: 5px;
